bear:
Fixed the GetAvailable function to return correct times.
Replaced the class Destructors in the load() function with delete.
Disabled the auto pid parse code as its still buggy for Timeshifting.
Fixed the line of code to update the duration, re converting to ref time rather than pcr time.
 
Added a property page to the TSFileSink Filter.
Added settings to the registry for the TSFileSink filter.

Added locking code to the pidparser to prevent the pid array from being accessed while its being updated.
changed the setpointer calls from FILE_BEGIN to FILE_END.
Enabled the auto pid reparsing code to check pids every 5sec.

nate:
Changes to MultiFileReader
- Fixed problem preventing second time play.
- Fixed problem of new files added having the wrong file ID.
- Fixed problem of not working when file was opened with files Removed > 0
- Fixed GetFileLength to work with files being written to.
- Added some debugging that can be turned on for a specific file reader.
Changed UpdateDuration to keep working if there's a PCR rollover.
Fixed some build warnings
- made MultiFileReader inherit FileReader publicly
- changed RegStore to use LPTSTR instead of std::string
- removed all #include <streams.h> from .h files.

bear:
Made improvments the Update duration code to correctly update the filtergraph time for MultiFileReader Mode.
Made changes to the SetAccuratePos function to correctly seek relative to the file end position, seems to improve the MultiFileReader seeking now.

Changed the default clock reference option to select the TSFileSource Internal clock.
Changed the AC3 Preference Option Default setting to disabled so that UK users don't loose audio if a private stream is detected as AC3 and is chosen.
Fixed a bug with the Program Pin Mode where it was not updating the duration.

Added code to improve the Cyclic Timeshift mode, it can now handle pauses to the writer or the Source and the current time remains static or increases accordingly.