@@ -98,7 +98,7 @@ void PidInfo::CopyFrom(PidInfo *pidInfo)
 	start = pidInfo->start;
 	end   = pidInfo->end;
 	dur   = pidInfo->dur;
-	base   = pidInfo->base;
+//	base   = pidInfo->base;
 
 	bitrate = pidInfo->bitrate; 
 	for (int i = 0 ; i < 16 ; i++ )
@@ -134,7 +134,7 @@ void PidInfo::CopyTo(PidInfo *pidInfo)
 	pidInfo->start = start;
 	pidInfo->end = end;
 	pidInfo->dur = dur;
-	pidInfo->base = base;
+//	pidInfo->base = base;
 	pidInfo->bitrate = bitrate;
 
 	for (int i = 0 ; i < 16 ; i++ )
